# ie7343-mlops-lab6

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  train_model.py
scripts/: deploy_cloud.sh
terraform/: main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
